samples/_failures_safe/1761288996_5562e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5dbc9b1.c: In function ‘main’:
./samples/SAFE/__tmp_f5dbc9b1.c:150:15: error: expected ‘)’ at end of input
  150 |     if (m.rows
      |        ~      ^
      |               )
./samples/SAFE/__tmp_f5dbc9b1.c:150:5: error: expected declaration or statement at end of input
  150 |     if (m.rows
      |     ^~
